Finished work with tast

--- a/book-shop/src/app/app.component.html
+++ b/book-shop/src/app/app.component.html
@@ -1,2 +1,2 @@
-<a [routerLink]="['/books']">Books</a>
+<a [routerLink]="['/books']" class="home-link">Home page</a>
 <router-outlet></router-outlet>
