--- a/book-shop/src/app/book-list/book-list.component.css
+++ b/book-shop/src/app/book-list/book-list.component.css
@@ -11,3 +11,9 @@ mat-card {
     display: block;
     margin-top: 10px;
  }
+
+ a {
+     font-size: 18px;
+     font-weight: 800;
+     color: black;
+ }
