--- a/book-shop/src/app/book-info/book-info.component.html
+++ b/book-shop/src/app/book-info/book-info.component.html
@@ -11,8 +11,8 @@
     <div>Publication year: <input matInput [(ngModel)]="editedBook.publication" [readonly]="!allowEdit"></div>
   </mat-form-field>
     
-  <button mat-button (click)="editBook()">Edit</button>
-  <button mat-button (click)="blockEdit()">Block edit</button>
-  <button mat-button (click)="save()">Save</button>
-  <button mat-button (click)="cancel()">Cancel</button>
+  <button mat-button (click)="editBook()" matTooltip="Please, click to edit book">Edit</button>
+  <button mat-button (click)="blockEdit()" matTooltip="Please, click to block editing">Block edit</button>
+  <button mat-button (click)="save()" matTooltip="Please, click to save data">Save</button>
+  <button mat-button (click)="cancel()"  matTooltip="Please, click to revert data">Cancel</button>
 </mat-card>
